--- a/website/slides/raw_slides/slides_03.qmd
+++ b/website/slides/raw_slides/slides_03.qmd
@@ -1105,7 +1105,7 @@ cat("RandomForest testing logloss:", round(mean(test_logloss), digits = 4), "\n"
 #| eval: true
 full_data <-
   wi_shots |>
-  dplyr::select(dplyr::all_of(c("id",shot_vars)))
+  dplyr::select(dplyr::all_of(c(shot_vars)))
 
 full_rf_fit <-
   ranger::ranger(formula = Y~.,data = full_data, probability = TRUE)
