Fix factor in lec3

--- a/website/slides/raw_slides/slides_03.qmd
+++ b/website/slides/raw_slides/slides_03.qmd
@@ -987,8 +987,8 @@ wi_shots <-
   wi_shots |>
   dplyr::mutate(
     shot.type.name = factor(shot.type.name),
-    shot.body_part.name = shot.body_part.name,
-    shot.technique.name = shot.technique.name)
+    shot.body_part.name = factor(shot.body_part.name),
+    shot.technique.name = factor(shot.technique.name))
 
 set.seed(479)
 train_data <-
