--- a/website/slides/raw_slides/slides_08.qmd
+++ b/website/slides/raw_slides/slides_08.qmd
@@ -39,6 +39,8 @@ execute:
 load("../../lectures/statcast2024.RData")
 load("../../lectures/runValue2024.RData")
 load("../../lectures/player2024_lookup.RData")
+load("../../lectures/raa_offensive2024.RData")
+
 oi_colors <- palette.colors(palette = "Okabe-Ito")
 ```
 
@@ -188,8 +190,6 @@ def_atbat2024 <-
 ```
 
 
-
-
 # Estimating Out Probabilities
 
 ## Unique Events {.smaller}
@@ -205,6 +205,7 @@ table(def_atbat2024$end_events[def_atbat2024$end_type == "X"], useNA = 'always')
 ```
 
 . . .
+
 - All `events` for balls and strikes
 ```{r}
 #| label: sanity-2
@@ -358,6 +359,7 @@ logit_fit <-
   glm(Out ~ x + y,
       family = binomial(link = "logit"), data = bip)
 ```
+
 ```{r}
 #| label: fit-logit-eval
 #| eval: true
@@ -434,7 +436,7 @@ gam_fit <-
       family = binomial(link="logit"), data = bip)
 ```
 
-### Visulization
+### Visualization
 ```{r}
 #| label: fig-out-gam
 #| eval: true
@@ -456,11 +458,11 @@ plot(1, type = "n",
      xaxt = "n", yaxt = "n", bty = "n", 
      main = "GAM out probabilities", xlab = "", ylab = "")
 
-for(i in 1:nrow(grid_probs_bin)){
-  rect(xleft = grid_probs_bin$x[i] - grid_sep/2, 
-       ybot = grid_probs_bin$y[i] - grid_sep/2,
-       xright = grid_probs_bin$x[i] + grid_sep/2,
-       ytop = grid_probs_bin$y[i] + grid_sep/2,
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
        col = adjustcolor(grid_gam_cols[i], alpha.f = 0.5),
        border = NA)
 }
@@ -480,6 +482,7 @@ points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
 ```
 
 ### Appending Out Probs
+
 ```{r}
 #| label: add-preds
 #| eval: true
@@ -571,12 +574,165 @@ raa_p |>
 # Fielding Run Values
 
 ## Fielding Responsibility{.smaller}
-- Say ball hit towards gap b/w 1st base and left field 
+- Say ball hit towards gap b/w 1st base and right field 
   - Batting team creates large positive $\delta$
   - $\hat{p} \approx 0$
   - $\delta^{(f)}$ is large and negative
   
 - How much blame should third baseman receive?
+
+
+## Fielder Out Probabilities
+
+```{r}
+#| label: fig-fielder-out-probs 
+#| eval: true
+#| echo: false
+library(mgcv)
+load("../../lectures/position_gam_fits.RData")
+
+
+# l = 5 (3rd basemen), l = 9 (RF), l = 3 (first basemen)
+
+grid_fielder_probs <- grid
+
+for(l in 1:9){
+  zero_index <- which( sqrt( (grid$x - mid_x[l])^2 + (grid$y - mid_y[l])^2) >= 150)
+  grid_fielder_probs[[paste0("prob", l)]] <-
+    predict(fit_list[[l]], newdata = grid, type = "response")
+  grid_fielder_probs[[paste0("prob",l)]][zero_index] <- 0
+}
+
+```
+
+:::{.panel-tabset}
+
+### 1B Out Prob
+
+```{r}
+#| label: fig-1b-pout
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+pout_1b_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$prob3)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "1B Out Probabilities", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(pout_1b_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+
+### 3B Out Prob
+```{r}
+#| label: fig-3b-pout
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+pout_3b_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$prob5)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "3B Out Probabilities", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(pout_3b_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+
+### RF Out Prob
+```{r}
+
+#| label: fig-rf-pout
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+pout_rf_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$prob9)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "RF Out Probabilities", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(pout_rf_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+
+:::
+
+
+
 
 ## Position Weights{.smaller}
 - Idea: assign $w_{\ell} \delta^{(f)}$ to fielder at position $\ell$
@@ -590,7 +746,159 @@ $$
 - Numerical stability: restrict to balls w/in 150ft of typical fielder location
   - I.e., balls hit to deep left field likely irrelevant for first baseman model
 
-## Run Value by Position
+
+
+
+
+
+## Position Weights Examples
+
+```{r}
+#| label: position-weights
+#| eval: true
+#| echo: false
+
+grid_fielder_probs <-
+  grid_fielder_probs |>
+  dplyr::mutate(total_prob = prob1 + prob2 + prob3 + prob4 + prob5 + prob6 + prob7 + prob8 + prob9,
+                w1 = ifelse(prob1 > 1e-16, prob1/total_prob, 0),
+                w2 = ifelse(prob2 > 1e-16, prob2/total_prob, 0),
+                w3 = ifelse(prob3 > 1e-16, prob3/total_prob, 0),
+                w4 = ifelse(prob4 > 1e-16, prob4/total_prob, 0),
+                w5 = ifelse(prob5 > 1e-16, prob5/total_prob, 0),
+                w6 = ifelse(prob6 > 1e-16, prob6/total_prob, 0),
+                w7 = ifelse(prob7 > 1e-16, prob7/total_prob, 0),
+                w8 = ifelse(prob8 > 1e-16, prob8/total_prob, 0),
+                w9 = ifelse(prob9 > 1e-16, prob9/total_prob, 0))
+```
+
+:::{.panel-tabset}
+
+### 1B Weight
+```{r}
+#| label: fig-1b-weight
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+weight_1b_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$w3)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "1B Weight", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(weight_1b_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+
+### 3B Weight
+```{r}
+#| label: fig-3b-weight
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+weight_3b_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$w5)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "3B Weight", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(weight_3b_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+
+
+### RF Weight
+```{r}
+#| label: fig-rf-weight
+#| eval: true
+#| echo: false
+#| fig-width: 5
+#| fig-height: 5
+
+weight_rf_cols <-
+  rgb(colorRamp(col_list,bias=1)(grid_fielder_probs$w9)/255) 
+
+par(mar = c(1,1,5,1), mgp = c(1.8, 0.5, 0))
+plot(1, type = "n", 
+     xlim = c(-300, 300), ylim = c(-100, 500), 
+     xaxt = "n", yaxt = "n", bty = "n", 
+     main = "RF Weight", xlab = "", ylab = "")
+
+for(i in 1:nrow(grid)){
+  rect(xleft = grid$x[i] - grid_sep/2, 
+       ybot = grid$y[i] - grid_sep/2,
+       xright = grid$x[i] + grid_sep/2,
+       ytop = grid$y[i] + grid_sep/2,
+       col = adjustcolor(weight_rf_cols[i], alpha.f = 0.5),
+       border = NA)
+}
+abline(a = 0, b = 1, col = oi_colors[5], lwd = 2) 
+abline(a = 0, b = -1, col = oi_colors[5], lwd = 2)
+
+lines(x = c(0,90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3) 
+lines(x = c(0,-90/sqrt(2)), y = c(0, 90/sqrt(2)), col = "white", lwd = 3)
+lines(x = c(90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+lines(x = c(-90/sqrt(2), 0), y = c(90/sqrt(2), 90*sqrt(2)), col = "white", lwd = 3)
+
+
+points(x = 0, y = 0, pch = 16, cex = 0.8, col = "white")
+points(x = 90/sqrt(2), y = 90/sqrt(2), pch = 16, cex = 0.8, col = "white")
+points(x = -90/sqrt(2), y = 90/sqrt(2), pch = 16,cex = 0.8, col = "white")
+points(x = 0, y = 90*sqrt(2), pch = 16, cex = 0.8, col = "white")
+```
+:::
+
+
+
+## Run Value by Fielding Position
 
 :::{.panel-set}
 ### Definition
@@ -600,6 +908,8 @@ $$
 - $\textrm{RAA}_{\ell}^{(f)}$: run value created by playing position $\ell$
 
 ### First Base (code)
+
+
 ```{r}
 #| label: raa-f3
 #| eval: true
@@ -631,6 +941,130 @@ raa_f3 |>
 - For each player we have $\textrm{RAA}^{(f)}_{1}, \ldots, \textrm{RAA}^{(f)}_{9}$
   - $\textrm{RAA}^{(f)}_{\ell}$: total run value created from fielding at position $\ell$
 - $\textrm{RAA}^{(f)} = \textrm{RAA}^{(f)}_{1} + \cdots + \textrm{RAA}^{(f)}_{9}$
+```{r}
+#| label: compute-raa-f
+#| eval: true
+#| echo: false
+raa_f1 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f1 = delta_f * w1) |>
+  dplyr::group_by(pitcher) |>
+  dplyr::summarize(RAA_f1 = sum(RAA_f1, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = pitcher) |>
+  dplyr::select(key_mlbam, RAA_f1)
+
+raa_f2 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f2 = delta_f * w2) |>
+  dplyr::group_by(fielder_2) |>
+  dplyr::summarize(RAA_f2 = sum(RAA_f2, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_2) |>
+  dplyr::select(key_mlbam, RAA_f2)
+
+raa_f3 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f3 = delta_f * w3) |>
+  dplyr::group_by(fielder_3) |>
+  dplyr::summarize(RAA_f3 = sum(RAA_f3, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_3) |>
+  dplyr::select(key_mlbam, RAA_f3)
+
+raa_f4 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f4 = delta_f * w4) |>
+  dplyr::group_by(fielder_4) |>
+  dplyr::summarize(RAA_f4 = sum(RAA_f4, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_4) |>
+  dplyr::select(key_mlbam, RAA_f4)
+
+raa_f5 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f5 = delta_f * w5) |>
+  dplyr::group_by(fielder_5) |>
+  dplyr::summarize(RAA_f5 = sum(RAA_f5, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_5) |>
+  dplyr::select(key_mlbam, RAA_f5)
+
+raa_f6 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f6 = delta_f * w6) |>
+  dplyr::group_by(fielder_6) |>
+  dplyr::summarize(RAA_f6 = sum(RAA_f6, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_6) |>
+  dplyr::select(key_mlbam, RAA_f6)
+
+raa_f7 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f7 = delta_f * w7) |>
+  dplyr::group_by(fielder_7) |>
+  dplyr::summarize(RAA_f7 = sum(RAA_f7, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_7) |>
+  dplyr::select(key_mlbam, RAA_f7)
+
+raa_f8 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f8 = delta_f * w8) |>
+  dplyr::group_by(fielder_8) |>
+  dplyr::summarize(RAA_f8 = sum(RAA_f8, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_8) |>
+  dplyr::select(key_mlbam, RAA_f8)
+
+raa_f9 <-
+  def_atbat2024 |>
+  dplyr::mutate(RAA_f9 = delta_f * w9) |>
+  dplyr::group_by(fielder_9) |>
+  dplyr::summarize(RAA_f9 = sum(RAA_f9, na.rm = TRUE)) |>
+  dplyr::rename(key_mlbam = fielder_9) |>
+  dplyr::select(key_mlbam, RAA_f9)
+
+raa_f <-
+  raa_f1 |>
+  dplyr::full_join(y = raa_f2, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f3, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f4, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f5, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f6, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f7, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f8, by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f9, by = "key_mlbam") |>
+  tidyr::replace_na(
+    list(RAA_f1=0, RAA_f2=0, RAA_f3=0, RAA_f4=0, 
+         RAA_f5=0, RAA_f6 = 0, RAA_f7=0, RAA_f8 = 0, RAA_f9=0)) |>
+  dplyr::mutate(
+    RAA_f = RAA_f1 + RAA_f2 + RAA_f3 + RAA_f4 + 
+      RAA_f5 + RAA_f6 + RAA_f7 + RAA_f8 + RAA_f9) |>
+  dplyr::inner_join(y = player2024_lookup, by = "key_mlbam") |>
+  dplyr::select(Name, key_mlbam, RAA_f, RAA_f1, RAA_f2, RAA_f3, RAA_f4, RAA_f5,
+                RAA_f6, RAA_f7, RAA_f8, RAA_f9)
+```
+
+## Putting It All Together
+- $\textrm{RAA} = \textrm{RAA}^{(b)} + \textrm{RAA}^{(br)} + \textrm{RAA}^{(f)} + \textrm{RAA}^{(p)}$
+```{r}
+#| label: compute-raa
+#| eval: true
+#| echo: true
+raa <-
+  raa_b |>
+  dplyr::select(-Name) |>
+  dplyr::full_join(y = raa_br |> dplyr::select(-Name), by = "key_mlbam") |>
+  dplyr::full_join(y = raa_p |> dplyr::select(-Name), by = "key_mlbam") |>
+  dplyr::full_join(y = raa_f |> dplyr::select(-Name), by = "key_mlbam") |>
+  tidyr::replace_na(list(RAA_b = 0, RAA_br = 0, RAA_f = 0, RAA_p = 0)) |>
+  dplyr::mutate(RAA = RAA_b + RAA_br + RAA_f + RAA_p) |>
+  dplyr::left_join(y = player2024_lookup |> dplyr::select(key_mlbam, Name), by = "key_mlbam") |>
+  dplyr::select(Name, key_mlbam, RAA, RAA_b, RAA_br, RAA_f, RAA_p)
+```
+
+## RAA Leaderboard
+
+```{r}
+#| label: raa-leaderboard
+#| eval: true
+#| echo: false
+raa |> dplyr::arrange(dplyr::desc(RAA)) |> dplyr::slice_head(n=10)
+```
+
 
 
 # Replacement Level
@@ -711,6 +1145,74 @@ cat("Cut-off for pitchers:", pitcher_pa$n[360], "\n")
 ```
 
 :::
+
+
+## Replacement-Level Per-At-Bat RAA
+
+- If we replace Ohtani w/ a replacement-level player, what $\textrm{RAA}$ values would they achieve?
+- Idea: multiple Ohtani's number of at-bats by average per-at-bat $\textrm{RAA}$ of replacement-level players
+- Divide total $\textrm{RAA}$ for all replacement-level players by total number of at-bats
+
+```{r}
+#| label: compute-avg-repl
+#| echo: true
+#| eval: true
+repl_position_raa <-
+  raa |>
+  dplyr::filter(key_mlbam %in% repl_position_players) |>
+  dplyr::inner_join(y = position_pa, by = "key_mlbam") |> #<1>
+  dplyr::select(Name, key_mlbam, RAA, n)
+
+repl_pitch_raa <-
+  raa |>
+  dplyr::filter(key_mlbam %in% repl_pitchers) |>
+  dplyr::inner_join(y = pitcher_pa, by = "key_mlbam") |>
+  dplyr::select(Name, key_mlbam, RAA, n) 
+
+repl_avg_pos <- sum(repl_position_raa$RAA)/sum(repl_position_raa$n)
+repl_avg_pitch <- sum(repl_pitch_raa$RAA)/sum(repl_pitch_raa$n)
+
+cat("Replacement-level per-at-bat RAA (position players):", round(repl_avg_pos, digits = 4), "\n")
+cat("Replacement-level per-at-bat RAA (pitchers):", round(repl_avg_pitch, digits = 4),"\n")
+```
+
+## Position Player WAR
+- Compare player's RAA to what replacement-level would achieve in same opportunities
+- 1 Win = 10 Runs
+
+
+:::{.panel-tabset}
+
+### Code
+```{r}
+#| label: position-war-code
+#| eval: true
+#| echo: true
+position_war <-
+  raa |>
+  dplyr::filter(!key_mlbam %in% repl_position_players) |>
+  dplyr::inner_join(y = position_pa, by = "key_mlbam") |> 
+  dplyr::select(Name, key_mlbam, RAA, n) |>
+  dplyr::mutate(shadowRAA = n * repl_avg_pos) |>
+  dplyr::mutate(WAR = (RAA - shadowRAA)/10)
+```
+
+### Top-10
+```{r}
+#| label: position-war-top10
+#| eval: true
+#| echo: false
+position_war |>
+  dplyr::arrange(dplyr::desc(WAR)) |>
+  dplyr::slice_head(n = 10)
+```
+
+:::
+
+
+
+
+
 <!--
 ## Pitch Trajectory Variables{.smaller}
 
