--- a/website/syllabus.qmd
+++ b/website/syllabus.qmd
@@ -74,7 +74,7 @@ We will use Canvas to handle report and presentation submissions, peer reviews, 
 
 There will be three group projects. Each project consists of two parts, a written report and a group presentation. The project due dates are October 10, November 7, and December 5.
 
-#### Written Report #{sec-written-report}
+#### Written Report {#sec-written-report}
 
 The written report consists of a non-technical executive summary and a technical report.
 The executive summary, which should not exceed 500 words, should describe the overall goals, analytic approach, and main conclusions in non-technical language.
@@ -93,7 +93,7 @@ Code listings and output (e.g., figures, tables, charts, and numerical summaries
 
 #### Presentation {#sec-presentation}
 
-Each team will also record an 8--10 minute presentation (e.g., using Zoom that provides an overview of their analysis.
+Each team will also record an 8--10 minute presentation (e.g., using Zoom) that provides an overview of their analysis.
 Each presentation should include the following elements
 
   * Background (2--4 slides): clearly motivate and state the main problem being studied. Explain why it is interesting and important. Present just enough background to motivate the problem, while taking care not to overwhelm the audience with extraneous details. If appropriate, comment on the limitations of existing solutions to the problem or closely-related problems
