--- a/website/slides/raw_slides/slides_04.qmd
+++ b/website/slides/raw_slides/slides_04.qmd
@@ -325,7 +325,7 @@ abline(h = 0, col = oi_colors[8])
 
 ```{r}
 #| label: fig-pm-poss
-#| fig-width: 6
+#| fig-width: 8
 #| fig-asp: 0.5625
 #| fig-align: center
 #| fig-cap: Variability in +/- increases with number of possessions!
@@ -370,21 +370,12 @@ rapm_data |> dplyr::select(stint_id, pts_diff, n_pos, margin) |> dplyr::slice_he
 - $Y_{i}$: point differential per 100 possessions in stint $i$ 
 - $h_{1}(i), \ldots, h_{5}(i)$ & $a_{1}(i), \ldots, a_{5}(i)$: identities of players on court in stint $i$
 
-. . .
-
 $$
 \begin{align}
 Y_{i} &= \alpha_{0} + \alpha_{h_{1}(i)} + \alpha_{h_{2}(i)} + \alpha_{h_{3}(i)} + \alpha_{h_{4}(i)} + \alpha_{h_{5}(i)} \\
 ~&~~~~~~~~~~- \alpha_{a_{1}(i)} - \alpha_{a_{2}(i)} - \alpha_{a_{3}(i)} - \alpha_{a_{4}(i)} - \alpha_{a_{5}(i)} + \epsilon_{i},
 \end{align}
 $$
-
-## Interpretation
-- Individual $\alpha_{j}$'s are meaningless!
-- $\alpha_{j}$: change in point differential per 100 possessions b/w
-  - Playing 5-on-5 w/ player $j$ on the court
-  - Playing 5-on-4 w/ player $j$ off the court
-- Differences (or *contrasts*) like $\alpha_{j}-\alpha_{j'}$ are much more useful
 
 ## Example{.smaller}
 
@@ -410,6 +401,15 @@ $$
 - DAL expects to score $\alpha_{\textrm{AD}} - \alpha_{\textrm{LD}}$ more points per 100 possessions with Davis than Doncic, **all else being equal**
 
 
+## Potential Issue: Interpretation
+- Individual $\alpha_{j}$'s are meaningless!
+- $\alpha_{j}$: change in point differential per 100 possessions b/w
+  - Playing 5-on-5 w/ player $j$ on the court
+  - Playing 5-on-4 w/ player $j$ off the court
+  
+- Luckily, we can interpret differences (or *contrasts*) like $\alpha_{j}-\alpha_{j'}$ 
+
+
 ## APM As A Linear Model
 
 * Append a column of 1's to $\boldsymbol{\mathbf{X}}$ to form $n \times (p+1)$ matrix $\boldsymbol{\mathbf{Z}}$
@@ -423,15 +423,6 @@ $$
 \textrm{argmin} \sum_{i = 1}^{n}{\left( Y_{i} - \boldsymbol{\mathbf{z}}_{i}^{\top}\boldsymbol{\alpha} \right)^{2}} .
 $$
 
-## Singularity{.smaller}
-* Least squares problem does not have a unique solution!
-* Columns of $\boldsymbol{\mathbf{Z}}$ are linearly dependent
-    * The first element in each row is equal to 1 (for intercept)
-  * 5 entries equal to 1 (for home players)
-  * 5 entries equal to -1 (for away players)
-* If you know all but one column, you can perfectly determine that column
-* $\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}}$ not invertible
-
 ## Non-identifiability
 
 - Recall that the model asserts
@@ -442,7 +433,17 @@ Y_{i} &= \alpha_{0} + \alpha_{h_{1}(i)} + \alpha_{h_{2}(i)} + \alpha_{h_{3}(i)} 
 \end{align}
 $$
 - Imagine we add 5 to every $\alpha_{j}$: right-hand side remains unchanged
-- So, we can't hope to learn $\alpha_{j}$'s exactly!
+- While we can't hope to learn $\alpha_{j}$'s exactly, can still interpret *constrasts* $\alpha_{j} - \alpha_{j'}$
+
+## Singularity{.smaller}
+* Least squares problem does not have a unique solution!
+* Columns of $\boldsymbol{\mathbf{Z}}$ are linearly dependent
+  * The first element in each row is equal to 1 (for intercept)
+  * 5 entries equal to 1 (for home players)
+  * 5 entries equal to -1 (for away players)
+* If you know all but one column, you can perfectly determine that column
+* $\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}}$ not invertible
+
 
 
 ## Baseline Contrasts{.smaller}
@@ -457,14 +458,13 @@ $$
 - For non-baseline $j = 1, \ldots, p,$ let $\beta_{j} = \alpha_{j} - \mu$
 - $\beta_{j}$: effect of replacing player $j$ *with a baseline player*
 
-## A Re-parametrized Model
+## A Re-parametrized Model{.smaller}
 - $\tilde{\boldsymbol{\mathbf{Z}}}$ be the $n \times (p'+1)$ submatrix of $\boldsymbol{\mathbf{Z}}$ s.t.
   - First column is all 1's
   - Remaining columns: signed on-court indicators for non-baseline players
 - Turns out: 
   - $\tilde{\boldsymbol{\mathbf{Z}}}\boldsymbol{\beta} = \boldsymbol{\mathbf{Z}}\boldsymbol{\alpha}$
-  - $\tilde{\boldsymbol{\mathbf{Z}}}$ 
-  - Can minimize $\sum_{i = 1}^{n}{\left(Y_{i} - \tilde{\boldsymbol{\mathbf{z}}}_{i}^{\top}\boldsymbol{\beta}\right)^{2}}$
+  - There quantity $\sum_{i = 1}^{n}{\left(Y_{i} - \tilde{\boldsymbol{\mathbf{z}}}_{i}^{\top}\boldsymbol{\beta}\right)^{2}}$ has a unique minimizer
 
 $$
 \hat{\boldsymbol{\beta}} = \left( \tilde{\boldsymbol{\mathbf{Z}}}^{\top}\tilde{\boldsymbol{\mathbf{Z}}}\right)^{-1}\tilde{\boldsymbol{\mathbf{Z}}}^{\top}\boldsymbol{\mathbf{Y}}.
@@ -520,20 +520,22 @@ apm |>
 
 # Weighted Adjusted Plus/Minus
 
-## Missing Context
+## Missing Context{.smaller}
 
 - APM does not account for context
+- Can over-inflate garbage-time performance when outcome essentially determined
+
 > "can artificially can artificially inflate the importance of performance in low-leverage situations, when the outcome of the game is essentially decided, while simultaneously deflating the importance of high-leverage performance, when the final outcome is still in question. For instance, point diﬀerential-based metrics model the home team’s lead dropping from 5 points to 0 points in the last minute of the first half in exactly the same way that they model the home team’s lead dropping from 30 points to 25 points in the last minute of the second half". 
 
 ## A Weighted Version of APM
 - Introduce weight $w_{i}$ for stint $i$
-- Find $\tilde{\boldsymbol{\beta}}$ minimizing $w_{i}\left(Y_{i} - \tilde{\boldsymbol{\mathbf{z}}}_{i}^{\top}\boldsymbol{\beta}\right)^{2}$
-- Solution: $\boldsymbol{\mathbf{W}}$ diagonal matrix w/ entries $w_{i}$
+- Find $\tilde{\boldsymbol{\beta}}$ minimizing $\sum{w_{i}\left(Y_{i} - \tilde{\boldsymbol{\mathbf{z}}}_{i}^{\top}\boldsymbol{\beta}\right)^{2}}$
+- Solution: letting $\boldsymbol{\mathbf{W}}$ denote diagonal matrix w/ entries $w_{i}$
 $$
 \hat{\boldsymbol{\beta}}_{w} = \left( \tilde{\boldsymbol{\mathbf{Z}}}^{\top}\tilde{\boldsymbol{\mathbf{Z}}}\right)^{-1}\tilde{\boldsymbol{\mathbf{Z}}}^{\top}\boldsymbol{\mathbf{W}}\boldsymbol{\mathbf{Y}}
 $$
 
-## Estimating wAPM
+## Estimating wAPM {.smaller}
 - Example weights: 
   * $w_{i} = 1$ if lead $< 10$
   * $w_{i} = 0$ if one team leads by $> 30$ at start of $i$
@@ -605,3 +607,17 @@ wapm |>
 - Next time: alternative estimation strategy
   - Avoids having to specify baseline players
   - Estimates a latent strength for *all* players
+
+## Project 1{.smaller}
+
+- Thanks for sorting yourselves into group!
+  - If you still don't have a group, let me know!
+  - On Canvas, you need to be in a group under "Projects 1&2 Groups"
+- [Project information](../../project1.qmd) posted:
+  - Requirements for written report and presentation
+  - Non-exhaustive list of project topics
+  - Main requirement: must use play-by-play or event-level data
+  - I.e., use data more granular than game- or season-level totals
+- Project Check-in: by **Friday 26 September** email me a short overview of your project
+  - Precise problem statement & overview of data and analysis plan
+  - Happy to help brainstorm & narrow down analysis in Office Hours (or by appt.)
